packages/typ/tests/fixtures/diagnostics/0996_mli_nested_path_zeroary_overapplied_09.mli
module Outer_iota : sig
  module Inner : sig
    type t
  end
end

val x_iota : int Outer_iota.Inner.t
